# XAgents

api/: __init__.py  app.py  pyproject.toml
api/configs/: __init__.py  deploy.py
api/configs/middleware/: __init__.py
api/configs/middleware/vector_db/: __init__.py
api/controllers/: __init__.py
api/controllers/files/: schema.py  views.py
api/core/: __init__.py
api/models/: __init__.py
app/: pyproject.toml  server.py
app/apis/: __init__.py
app/apis/agents/: __init__.py  router.py  schema.py
app/apis/files/: __init__.py  router.py
app/apis/mcp/: __init__.py
app/apis/workflows/: __init__.py
app/configs/: app_config.py  feature.py  packaging.py
app/configs/middleware/cache/: __init__.py  redis.py
app/configs/middleware/vector_db/: elastic_search.py  milvus.py
app/configs/security/: __init__.py
app/controllers/files/: views.py
app/core/: limiter.py  security.py
app/core/langgraph/: graph.py
app/core/langgraph/tools/: __init__.py  duckduckgo_search.py
app/core/prompts/: __init__.py  system.md
app/embedding/: __init__.py
app/models/: account.py  base.py
app/models/schemas/: __init__.py  chat.py  graph.py
app/services/auth/: __init__.py  account_service.py
app/utils/: __init__.py  graph.py  logging.py
sdk/xverse/: __init__.py
sdk/xverse/core/: __init__.py
sdk/xverse/vector_database/: __init__.py  elastic_search.py  utils.py
