[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.0.2",
    "fastapi>=0.115.14",
    "fastapi-mcp>=0.3.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langfuse>=3.1.2",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
